schema.markers: Documentation ; signals

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -52,8 +52,19 @@ Errors
 ### {{ Invalid.cls.name }}
 {{ fdoc(Invalid.cls) }}
 
-#### {{ Invalid.attrs.enrich.qualname }}()
+#### `{{ Invalid.attrs.enrich.qualname }}()`
 {{ fdoc(Invalid.attrs.enrich) }}
 
 ### {{ MultipleInvalid.cls.name }}
 {{ fdoc(MultipleInvalid.cls) }}
+
+Markers
+=======
+
+{{ markers.module.doc }}
+
+{% for marker in markers.members %}
+### `{{ marker.qualname }}`
+{{ fdoc(marker) }}
+{% endfor %}
+
