--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -29,6 +29,25 @@ Good
 Table of Contents
 =================
 
+* <a href="#good">Good</a>
+* <a href="#table-of-contents">Table of Contents</a>
+* <a href="#schema">Schema</a>
+    * <a href="#callables">Callables</a>
+    * <a href="#priorities">Priorities</a>
+    * <a href="#creating-a-schema">Creating a Schema</a>
+    * <a href="#validating">Validating</a>
+* <a href="#errors">Errors</a>
+        * <a href="#invalid">Invalid</a>
+            * <a href="#invalidenrich">Invalid.enrich()</a>
+        * <a href="#multipleinvalid">MultipleInvalid</a>
+* <a href="#markers">Markers</a>
+        * <a href="#required">Required</a>
+        * <a href="#optional">Optional</a>
+        * <a href="#remove">Remove</a>
+        * <a href="#reject">Reject</a>
+        * <a href="#allow">Allow</a>
+        * <a href="#extra">Extra</a> 
+
 
 Schema
 ======
