--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -45,6 +45,11 @@ Table of Contents
     * <a href="#reject">Reject</a>
     * <a href="#allow">Allow</a>
     * <a href="#extra">Extra</a>
+* <a href="#helpers">Helpers</a>
+    * <a href="#object">Object</a>
+    * <a href="#msg">Msg</a>
+    * <a href="#message">message</a>
+    * <a href="#truth">truth</a> 
 
 
 Schema
