README: further documentation stubs

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -105,3 +105,31 @@ Validation Tools
 Helpers
 -------
 {{ libdoc(helpers) }}
+
+Predicates
+----------
+{{ libdoc(predicates) }}
+
+Types
+-----
+{{ libdoc(types) }}
+
+Values
+------
+{{ libdoc(values) }}
+
+Boolean
+-------
+{{ libdoc(boolean) }}
+
+Numbers
+-------
+{{ libdoc(numbers) }}
+
+Strings
+-------
+{{ libdoc(strings) }}
+
+Files
+-----
+{{ libdoc(files) }}
