--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -45,12 +45,27 @@ Table of Contents
     * <a href="#reject">Reject</a>
     * <a href="#allow">Allow</a>
     * <a href="#extra">Extra</a>
+    * <a href="#entire">Entire</a>
 * <a href="#validation-tools">Validation Tools</a>
     * <a href="#helpers">Helpers</a>
         * <a href="#object">Object</a>
         * <a href="#msg">Msg</a>
+        * <a href="#check">Check</a>
         * <a href="#message">message</a>
+        * <a href="#name">name</a>
         * <a href="#truth">truth</a>
+    * <a href="#predicates">Predicates</a>
+        * <a href="#any">Any</a>
+        * <a href="#all">All</a>
+        * <a href="#neither">Neither</a>
+        * <a href="#inclusive">Inclusive</a>
+        * <a href="#exclusive">Exclusive</a>
+    * <a href="#types">Types</a>
+    * <a href="#values">Values</a>
+    * <a href="#boolean">Boolean</a>
+    * <a href="#numbers">Numbers</a>
+    * <a href="#strings">Strings</a>
+    * <a href="#files">Files</a> 
 
 
 Schema
