validators.files: IsFile, IsDir, PathExists

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -83,7 +83,10 @@ Table of Contents
         * <a href="#replace">Replace</a>
         * <a href="#url">Url</a>
         * <a href="#email">Email</a>
-    * <a href="#files">Files</a> 
+    * <a href="#files">Files</a>
+        * <a href="#isfile">IsFile</a>
+        * <a href="#isdir">IsDir</a>
+        * <a href="#pathexists">PathExists</a>
 
 
 Schema
