voluptuous: Compatibility layer

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -29,6 +29,7 @@ Good
 Table of Contents
 =================
 
+* <a href="#voluptuous-drop-in-replacement">Voluptuous Drop-In Replacement</a>
 * <a href="#schema">Schema</a>
     * <a href="#callables">Callables</a>
     * <a href="#priorities">Priorities</a>
@@ -88,6 +89,11 @@ Table of Contents
         * <a href="#isdir">IsDir</a>
         * <a href="#pathexists">PathExists</a>
 
+
+Voluptuous Drop-In Replacement
+==============================
+
+{{ voluptuous.doc }}
 
 Schema
 ======
