good: Lots of tiny fixes everywhere ; Type() validator ; relaxed rules for Py2 strings

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -61,6 +61,7 @@ Table of Contents
         * <a href="#inclusive">Inclusive</a>
         * <a href="#exclusive">Exclusive</a>
     * <a href="#types">Types</a>
+        * <a href="#type">Type</a>
         * <a href="#coerce">Coerce</a>
     * <a href="#values">Values</a>
         * <a href="#in">In</a>
