README: TOC update

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -69,6 +69,7 @@ Table of Contents
         * <a href="#length">Length</a>
         * <a href="#default">Default</a>
         * <a href="#fallback">Fallback</a>
+        * <a href="#map">Map</a>
     * <a href="#boolean">Boolean</a>
         * <a href="#check">Check</a>
         * <a href="#truthy">Truthy</a>
