validators.dates: DateTime, Date, Time

--- a/misc/_doc/README.md.j2
+++ b/misc/_doc/README.md.j2
@@ -87,6 +87,10 @@ Table of Contents
         * <a href="#replace">Replace</a>
         * <a href="#url">Url</a>
         * <a href="#email">Email</a>
+    * <a href="#dates">Dates</a>
+        * <a href="#datetime">DateTime</a>
+        * <a href="#date">Date</a>
+        * <a href="#time">Time</a>
     * <a href="#files">Files</a>
         * <a href="#isfile">IsFile</a>
         * <a href="#isdir">IsDir</a>
@@ -174,6 +178,10 @@ Numbers
 Strings
 -------
 {{ libdoc(strings) }}
+
+Dates
+-----
+{{ libdoc(dates) }}
 
 Files
 -----
